# jotts

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: auth.rs  db.rs  main.rs  server.rs
static/: styles.css
templates/: base.html  edit.html  index.html  login.html  new.html  view.html
