[package]
name = "jotts"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4.0"
rust-embed = "8"
dotenvy = "0.15"
subtle = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
pulldown-cmark = "0.12"
